working olcPixelGameEngine based app running on MacOS

--- a/gpu/BUILD
+++ b/gpu/BUILD
@@ -1,4 +1,6 @@
-cc_binary(
-    name = "main",
-    srcs = ["main.cpp"],
+cc_library(
+    name = "App",
+    srcs = ["App.cpp"],
+    hdrs = ["App.h", "olcPixelGameEngine.h"],
+    visibility = ["//main:__pkg__"]
 )
