VectorDotProduct: add unit tests

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -55,6 +55,7 @@ add_executable(TestRtl
     test/FixedPointMultiply.test.cpp
     test/FixedPointDivide.test.cpp
     test/MatrixMultiplyVector.test.cpp
+    test/VectorDotProduct.test.cpp
     gpu/Matrix.cpp
 )
 
@@ -63,6 +64,7 @@ verilate(TestRtl SOURCES gpu/rtl/FixedPointSub.v INCLUDE_DIRS gpu/rtl)
 verilate(TestRtl SOURCES gpu/rtl/FixedPointMultiply.v INCLUDE_DIRS gpu/rtl)
 verilate(TestRtl SOURCES gpu/rtl/FixedPointDivide.v INCLUDE_DIRS gpu/rtl)
 verilate(TestRtl SOURCES gpu/rtl/MatrixMultiplyVector.v INCLUDE_DIRS gpu/rtl)
+verilate(TestRtl SOURCES gpu/rtl/VectorDotProduct.v INCLUDE_DIRS gpu/rtl)
 
 target_link_libraries(TestRtl PRIVATE gtest_main)
 
