Add failing tests for MatrixMultiplyVector + VertexTransform

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -60,11 +60,13 @@ add_executable(TestRtl
     test/FixedPointDivide.test.cpp
     test/MathTestHelpers.cpp
     test/MatrixMultiplyVector.test.cpp
+    test/Matrix44.test.cpp
     test/VectorDotProduct.test.cpp
     test/VectorAddVector.test.cpp
     test/VectorMultiplyScalar.test.cpp
     test/VectorDivideScalar.test.cpp
-    test/Matrix44.test.cpp
+    test/VectorSelect.test.cpp
+    test/VertexTransform.test.cpp
     gpu/Matrix44.cpp
     gpu/Vector4.cpp
 )
@@ -78,6 +80,8 @@ verilate(TestRtl SOURCES gpu/rtl/VectorDotProduct.v INCLUDE_DIRS gpu/rtl)
 verilate(TestRtl SOURCES gpu/rtl/VectorAddVector.v INCLUDE_DIRS gpu/rtl)
 verilate(TestRtl SOURCES gpu/rtl/VectorMultiplyScalar.v INCLUDE_DIRS gpu/rtl)
 verilate(TestRtl SOURCES gpu/rtl/VectorDivideScalar.v INCLUDE_DIRS gpu/rtl)
+verilate(TestRtl SOURCES gpu/rtl/VertexTransform.v INCLUDE_DIRS gpu/rtl)
+verilate(TestRtl SOURCES gpu/rtl/VectorSelect.v INCLUDE_DIRS gpu/rtl)
 
 target_link_libraries(TestRtl PRIVATE gtest_main)
 
