TriangleBackFaceCull: add verilog implemenation based on 2D cross product

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -64,12 +64,15 @@ add_executable(TestRtl
     test/MatrixMultiplyVector.test.cpp
     test/Matrix44.test.cpp
     test/TriangleRasterizerTiming.test.cpp
+    test/TriangleBackFaceCull.test.cpp
     test/VectorDotProduct.test.cpp
     test/VectorAddVector.test.cpp
+    test/VectorSubVector.test.cpp
     test/VectorMultiplyScalar.test.cpp
     test/VectorDivideScalar.test.cpp
     test/VectorSelect.test.cpp
     test/VectorCrossProduct.test.cpp
+    test/VectorCrossProduct2D.test.cpp
     test/VertexTransform.test.cpp
     gpu/Matrix44.cpp
     gpu/Vector4.cpp
@@ -83,12 +86,15 @@ verilate(TestRtl SOURCES gpu/rtl/FixedPointDivide.v INCLUDE_DIRS gpu/rtl)
 verilate(TestRtl SOURCES gpu/rtl/MatrixMultiplyVector.v INCLUDE_DIRS gpu/rtl)
 verilate(TestRtl SOURCES gpu/rtl/VectorDotProduct.v INCLUDE_DIRS gpu/rtl)
 verilate(TestRtl SOURCES gpu/rtl/VectorCrossProduct.v INCLUDE_DIRS gpu/rtl)
+verilate(TestRtl SOURCES gpu/rtl/VectorCrossProduct2D.v INCLUDE_DIRS gpu/rtl)
 verilate(TestRtl SOURCES gpu/rtl/VectorAddVector.v INCLUDE_DIRS gpu/rtl)
+verilate(TestRtl SOURCES gpu/rtl/VectorSubVector.v INCLUDE_DIRS gpu/rtl)
 verilate(TestRtl SOURCES gpu/rtl/VectorMultiplyScalar.v INCLUDE_DIRS gpu/rtl)
 verilate(TestRtl SOURCES gpu/rtl/VectorDivideScalar.v INCLUDE_DIRS gpu/rtl)
 verilate(TestRtl SOURCES gpu/rtl/VertexTransform.v INCLUDE_DIRS gpu/rtl)
 verilate(TestRtl SOURCES gpu/rtl/VectorSelect.v INCLUDE_DIRS gpu/rtl)
 verilate(TestRtl SOURCES gpu/rtl/TriangleRasterizerTiming.v INCLUDE_DIRS gpu/rtl)
+verilate(TestRtl SOURCES gpu/rtl/TriangleBackFaceCull.v INCLUDE_DIRS gpu/rtl)
 
 target_link_libraries(TestRtl PRIVATE gtest_main)
 
